--- a/index.css
+++ b/index.css
@@ -1,10 +1,84 @@
-#result {
-    width: 100%;
+body, div, a {
+    padding:0;
+    margin:0;
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 }
-#operator_bay {
-    margin: 20px;
+
+#calculator {
+    background-color: white;
+    width: 300px;
+    height: 460px;
+    border: 2px black solid;
+    margin: 6px auto;
+    padding: 5px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -khtml-border-radius: 8px;
+    border-radius: 12px;
 }
-#result[readonly]
-{
-    background-color:blue;
+
+#calculator a {
+    display: block;
+    float: left;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    background: -moz-linear-gradient(top, #EDEDED, #DCDCDC);
+    background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC));
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EDEDED', endColorstr='#DCDCDC');
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -khtml-border-radius: 8px;
+    border-radius: 14px;
+    color: white;
+}
+
+#numbers, #operators {
+    margin: auto;   
+}
+
+#operators a {
+    width: 44px;
+    height: 60px;
+    font-size: 39px;
+    padding: 2px;
+    margin: 5px 6px;
+}
+
+#numbers a {
+    width: 50px;
+    height: 50px;
+    font-size: 32px;
+    padding: 10px;
+    margin: 5px;
+}
+
+#total {
+    height: 60px;
+    width: 280px;
+    margin:auto;
+    background-color:white;
+    margin-bottom: 5px;
+    text-align: right;
+    font-size: 60px;
+    padding: 0px 5px;
+}
+
+#side {
+    width: 40px;
+    float: right;
+}
+
+#side a {
+    width: 30px;
+    height: 45px;
+    float: right;
+    font-size: 32px;
+    padding: 10px;
+    margin: 5px;
+}
+
+a#equals {
+    padding-top: 50px;
+    height: 100px;
 }
