--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body, div, a {
     border: 3px gray solid;
     margin: 10px auto;
     padding: 5px;
+     background-repeat: no-repeat;
+    background-size: cover;
+    background-image:url("http://media.giphy.com/media/13bGgH9VnEDsuA/giphy.gif");
    
  
 }
@@ -31,6 +34,7 @@ body, div, a {
     border-radius: 10px;
     color: white;
     background-color: gray;
+    opacity: 0.7;
 }
 
 #numbers, #operators {
